--- a/studio-integral/src/app/app.component.html
+++ b/studio-integral/src/app/app.component.html
@@ -12,6 +12,7 @@
           <a class="nav-link mx-3 active" aria-current="page" [routerLink]="['/main/home']">Home</a>
           <a class="nav-link mx-3" aria-current="page" [routerLink]="['/main/formacao']">Formação</a>
           <a class="nav-link mx-3" [routerLink]="['/main/retiro']">Cura e Chakras</a>
+          <a class="nav-link mx-3" [routerLink]="['/main/retiro-meditacao']">Retiro Meditação</a>
           <a class="nav-link mx-3" [routerLink]="['/main/aulas-presencial']">Presencial</a>
           <a class="nav-link mx-3" [routerLink]="['/main/aulas-online']">App Online</a>
           <a class="nav-link mx-3" [routerLink]="['/main/mestres-da-linhagem']">Mestres</a>
