--- a/studio-integral/src/app/main/home/home.component.html
+++ b/studio-integral/src/app/main/home/home.component.html
@@ -8,7 +8,16 @@
           <img src="../assets/banner1mobile.png" class="d-block d-sm-none w-100 banner" alt="...">
           <div class="carousel-caption d-block h-75">
             <h1> <span class="titulo-destaque-main display-5">Studio Integral</span> </h1>
-            <p> <span class="texto-destaque-main" href="/main/formacao">O melhor de você está aqui</span> </p>
+            <p> <span class="texto-destaque-main" href="/main/formacao">11 Anos transformando vidas.<br> Promovendo
+                propósito, autoconhecimento e espiritualidade.</span> </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../assets/meditacao1.png" loading="lazy" class="d-block w-100 imagem-carrosel" alt="...">
+          <div class="carousel-caption d-block h-75">
+            <h1 class="fonte-destaque display-4">Retiro Meditação Sri Vidya Tantra</h1>
+            <p class="texto-destaque">Venha viver essa transformação!</p>
+            <a class="btn btn-primary btn-carrosel" href="/main/retiro-meditacao">Saiba Mais</a>
           </div>
         </div>
         <div class="carousel-item">
@@ -16,10 +25,10 @@
           <div class="carousel-caption d-block h-75">
             <h1 class="fonte-destaque display-5">Formação Yoga</h1>
             <p class="texto-destaque">Treinamento profissional em Yoga, Meditação e Autoconhecimento.</p>
-            <button class="btn btn-primary btn-carrosel" href="/main/formacao">Saiba Mais</button>
+            <a class="btn btn-primary btn-carrosel" href="/main/formacao">Saiba Mais</a>
           </div>
         </div>
-        <div class="carousel-item">
+        <!-- <div class="carousel-item">
           <img src="../assets/banner3.png" loading="lazy" class="d-block w-100 imagem-carrosel" alt="...">
           <div class="carousel-caption d-block h-75">
             <h1 class="fonte-destaque display-4">Retiro Cura e Chakras</h1>
@@ -27,7 +36,7 @@
               energias.</p>
             <button class="btn btn-primary btn-carrosel" href="/main/retiro">Saiba Mais</button>
           </div>
-        </div>
+        </div> -->
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
         data-bs-slide="prev">
