--- a/studio-integral/src/app/app.component.scss
+++ b/studio-integral/src/app/app.component.scss
@@ -13,3 +13,7 @@
   font-family: 'Open Sans', sans-serif;
   font-weight: 500;
 }
+
+h1, h2, h3, h4, h5, h6, p, span, a{
+  font-family: 'Open Sans', sans-serif;
+}
