--- a/studio-integral/src/app/main/home/home.component.scss
+++ b/studio-integral/src/app/main/home/home.component.scss
@@ -19,8 +19,8 @@
   color: #fff;
   /* -webkit-text-stroke: 0.5px black; */
   /* background-color: #4d297174; */
-  font-weight: 600;
-  font-size: 2rem;
+  font-weight: 500;
+  font-size: 1.75rem;
   text-shadow: 0 0 8px rgba(0, 0, 0, 0.505);
 }
 
@@ -124,6 +124,11 @@ border-top-right-radius: 30px;
 
 
 @media (max-width: 576px) {
+
+  .texto-destaque-main{
+    text-shadow: 0 0 12px rgba(0, 0, 0, 0.505);
+    font-size: 1.40rem;
+  }
 
     .banner{
       object-fit: cover;
