alteração texto retiro e formação

--- a/studio-integral/src/app/app.component.html
+++ b/studio-integral/src/app/app.component.html
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
         <div class="navbar-nav align-items-center justify-content-center">
           <a class="nav-link mx-3 active" aria-current="page" [routerLink]="['/main/home']">Home</a>
-          <a class="nav-link mx-3" aria-current="page" [routerLink]="['/main/formacao']">Formação</a>
+          <a class="nav-link mx-3" aria-current="page" href="/main/formacao#compra">Formação</a>
           <a class="nav-link mx-3" [routerLink]="['/main/retiro']">Cura e Chakras</a>
           <a class="nav-link mx-3" [routerLink]="['/main/retiro-meditacao']">Retiro Meditação</a>
           <a class="nav-link mx-3" [routerLink]="['/main/aulas-presencial']">Presencial</a>
