--- a/studio-integral/src/app/main/home/home.component.html
+++ b/studio-integral/src/app/main/home/home.component.html
@@ -8,7 +8,7 @@
           <img src="../assets/banner1mobile.png" class="d-block d-sm-none w-100 banner" alt="...">
           <div class="carousel-caption d-block h-75">
             <h1> <span class="titulo-destaque-main display-5">Studio Integral</span> </h1>
-            <p> <span class="texto-destaque-main" href="/main/formacao">11 Anos transformando vidas.<br> Promovendo
+            <p> <span class="texto-destaque-main">11 Anos transformando vidas.<br> Promovendo
                 propósito, autoconhecimento e espiritualidade.</span> </p>
           </div>
         </div>
@@ -25,7 +25,7 @@
           <div class="carousel-caption d-block h-75">
             <h1 class="fonte-destaque display-5">Formação Yoga</h1>
             <p class="texto-destaque">Treinamento profissional em Yoga, Meditação e Autoconhecimento.</p>
-            <a class="btn btn-primary btn-carrosel" href="/main/formacao">Saiba Mais</a>
+            <a class="btn btn-primary btn-carrosel" href="/main/formacao#compra">Saiba Mais</a>
           </div>
         </div>
         <!-- <div class="carousel-item">
@@ -132,7 +132,7 @@
               os valores fundamentais dos métodos tradicionais do Yoga (Raja Yoga, Bhakti Yoga, Jñana Yoga, Karma
               Yoga
               e Tantra Yoga).</p>
-            <a class="btn btn-primary btn-card ms-4" href="/main/formacao">Saiba Mais</a>
+            <a class="btn btn-primary btn-card ms-4" href="/main/formacao#compra">Saiba Mais</a>
           </div>
         </div>
 
