--- a/studio-integral/src/app/main/retiro/retiro.component.html
+++ b/studio-integral/src/app/main/retiro/retiro.component.html
@@ -23,7 +23,13 @@
       <div class="col-12">
         <div class="row">
           <div class="col-12 d-flex flex-column align-items-center">
-            <h1 class="text-center my-5"> O que é o Retiro Cura e Chakras?</h1>
+            <h1 class="text-center text-limit my-5">Transforme a si mesmo e tenha a possibilidade de mudar sua realidade
+              com esta imersão.</h1>
+            <h1 class="text-center mt-4 mb-3"> O que é o Retiro Cura e Chakras?</h1>
+            <p class="text-center">Uma nova forma de se ver através de uma leitura da alma.</p>
+            <p class="text-center">Quem sou eu?</p>
+            <p class="text-center">Porque sempre faço as mesmas escolhas?</p>
+            <p class="text-center">Ou atraio as mesmas situações?</p>
             <p class="text-center mb-5 text-limit">
               O retiro Cura e Chakras é uma experiência intensa de autoconhecimento, que tem como base a prática dos
               ensinamentos do Kalaripayattu (conhecida como o Yoga dos guerreiros do sul da Índia) e as meditações do
@@ -33,7 +39,7 @@
               verdadeiro ser, através da leitura dos Chakras.
               <br>
               Nesta imersão são utilizadas técnicas que revelam e tratam emoções estagnadas, libertam do passado e
-              permitem viver o poder do agora, o nosso poder de cura e restauração interior.
+              permitem viver o poder do agora, o nosso poder de cura e restauração <b>interior</b>.
             </p>
           </div>
           <div class="col-12 mb-5 d-flex justify-content-center">
@@ -90,52 +96,40 @@
           aria-label="Slide 10"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10"
           aria-label="Slide 11"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11"
-          aria-label="Slide 12"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12"
-          aria-label="Slide 13"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13"
-          aria-label="Slide 14"></button>
       </div>
       <div class="carousel-inner">
+        <div class="carousel-item ">
+          <img src="../assets/retiromeditacao3.jpeg" class="d-block imagem-carrosel" alt="...">
+        </div>
         <div class="carousel-item active">
-          <img src="../assets/retiro1.jpeg" class="d-block imagem-carrosel" alt="...">
+          <img src="../assets/retiromeditacao1.jpeg" class="d-block imagem-carrosel" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="../assets/retiro2.jpeg" class="d-block imagem-carrosel" alt="...">
+          <img src="../assets/retiromeditacao2.jpeg" class="d-block imagem-carrosel" alt="...">
         </div>
         <div class="carousel-item ">
-          <img src="../assets/retiro3.jpeg" class="d-block imagem-carrosel" alt="...">
+          <img src="../assets/retiromeditacao4.jpeg" class="d-block imagem-carrosel" alt="...">
         </div>
         <div class="carousel-item ">
-          <img src="../assets/retiro4.jpeg" class="d-block imagem-carrosel" alt="...">
+          <img src="../assets/retiromeditacao5.jpeg" class="d-block imagem-carrosel" alt="...">
         </div>
         <div class="carousel-item ">
-          <img src="../assets/retiro5.jpeg" class="d-block imagem-carrosel" alt="...">
+          <img src="../assets/retiromeditacao6.jpeg" class="d-block imagem-carrosel" alt="...">
         </div>
         <div class="carousel-item ">
-          <img src="../assets/retiro6.jpeg" class="d-block imagem-carrosel" alt="...">
+          <img src="../assets/retiromeditacao7.jpeg" class="d-block imagem-carrosel" alt="...">
         </div>
         <div class="carousel-item ">
-          <img src="../assets/retiro7.jpeg" class="d-block imagem-carrosel" alt="...">
+          <img src="../assets/retiromeditacao8.jpeg" class="d-block imagem-carrosel" alt="...">
         </div>
         <div class="carousel-item ">
-          <img src="../assets/retiro8.jpeg" class="d-block imagem-carrosel" alt="...">
+          <img src="../assets/retiromeditacao9.jpeg" class="d-block imagem-carrosel" alt="...">
         </div>
         <div class="carousel-item ">
-          <img src="../assets/retiro9.jpeg" class="d-block imagem-carrosel" alt="...">
+          <img src="../assets/retiromeditacao10.jpeg" class="d-block imagem-carrosel" alt="...">
         </div>
         <div class="carousel-item ">
-          <img src="../assets/retiro10.jpeg" class="d-block imagem-carrosel" alt="...">
-        </div>
-        <div class="carousel-item ">
-          <img src="../assets/retiro11.jpeg" class="d-block imagem-carrosel" alt="...">
-        </div>
-        <div class="carousel-item ">
-          <img src="../assets/retiro13.jpeg" class="d-block imagem-carrosel" alt="...">
-        </div>
-        <div class="carousel-item ">
-          <img src="../assets/retiro14.jpeg" class="d-block imagem-carrosel" alt="...">
+          <img src="../assets/retiromeditacao11.jpeg" class="d-block imagem-carrosel" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleIndicators"
@@ -214,25 +208,16 @@
       <div class="row d-flex justify-content-center">
         <div class="col-12 col-lg-6 p-0 d-flex flex-column align-items-center">
           <h4 class="dia-programacao ms-4">
-            Dia 03 de Setembro
+            Dia 11 de Novembro - Sexta Feira
           </h4>
           <ul class="lista-programacao">
-            <li>06h às 07h – Prática de meditação</li>
-            <li>07h às 09h – Aula pratica kalaripayattu.</li>
-            <li>09h às 10:30h – Café da manhã</li>
-            <li>10:30h às 12h – Karma Yoga</li>
-            <li>12h às 13:30h – Aula filosófica(Koshas)</li>
-            <li>13:30h às 14:30h – Almoço</li>
-            <li>14:30h às 16:30h – Tempo livre</li>
-            <li>16:30h às 17:30h – Chá tarde</li>
-            <li>17:30h às 18:30h – Aula prática de Yoga</li>
-            <li>18:30h às 19:30h – Roda de Mantras</li>
-            <li>20h – Jantar</li>
+            <li>18h – Chegada dos participantes</li>
+            <li>19:30h – Cerimônia de abertura</li>
           </ul>
         </div>
         <div class="col-12 col-lg-6 p-0 d-flex flex-column align-items-center">
           <h4 class="dia-programacao ms-4">
-            Dia 03 de Setembro
+            Dia 12 de Novembro - Sábado
           </h4>
           <ul class="lista-programacao">
             <li>06h às 07h – Prática de meditação</li>
@@ -251,7 +236,7 @@
       </div>
       <div class="row d-flex justify-content-center">
         <div class="col-12 col-lg-6  d-flex flex-column align-items-center">
-          <h4 class="dia-programacao ms-4">Dia 03 de Setembro</h4>
+          <h4 class="dia-programacao ms-4">Dia 13 de Novembro - Domingo</h4>
           <ul class="lista-programacao">
             <li>06h às 07h – Prática de meditação</li>
             <li>07h às 09h – Aula pratica kalaripayattu.</li>
@@ -268,7 +253,7 @@
         </div>
         <div class="col-12 col-lg-6 p-0 d-flex flex-column align-items-center">
           <h4 class="dia-programacao ms-4">
-            Dia 03 de Setembro
+            Dia 14 de Novembro - Segunda
           </h4>
           <ul class="lista-programacao">
             <li>06h às 07h – Prática de meditação</li>
@@ -288,20 +273,13 @@
       <div class="row d-flex justify-content-center">
         <div class="col-12 col-lg-6 p-0 d-flex flex-column align-items-center">
           <h4 class="dia-programacao ms-4">
-            Dia 03 de Setembro
+            Dia 15 de Novembro - Terça
           </h4>
           <ul class="lista-programacao">
-            <li>06h às 07h – Prática de meditação</li>
-            <li>07h às 09h – Aula pratica kalaripayattu.</li>
-            <li>09h às 10:30h – Café da manhã</li>
-            <li>10:30h às 12h – Karma Yoga</li>
-            <li>12h às 13:30h – Aula filosófica(Koshas)</li>
-            <li>13:30h às 14:30h – Almoço</li>
-            <li>14:30h às 16:30h – Tempo livre</li>
-            <li>16:30h às 17:30h – Chá tarde</li>
-            <li>17:30h às 18:30h – Aula prática de Yoga</li>
-            <li>18:30h às 19:30h – Roda de Mantras</li>
-            <li>20h – Jantar</li>
+            <li>08h – Prática de yoga e meditação</li>
+            <li>09h – Encerramento</li>
+            <li>10h – Brunch</li>
+            <li>12h – Karma Yoga e retorno</li>
           </ul>
         </div>
       </div>
@@ -340,35 +318,30 @@
   </div>
   <div id="compra" class="preco">
     <div class="row d-flex justify-content-center m-0 pt-4">
-      <div class="col-12 col-lg-3 d-flex flex-column align-items-center p-0">
+      <div class="col-12 d-flex flex-column align-items-center p-0">
+        <h4>Promoção de lançamento</h4>
+        <p class="text-center">O valor do retiro Cura Chakras é de R$ 3.100,00</p>
+        <p class=" texto-preco text-center mb-0">Mas até dia 10 de setembro alunos da casa pagam apenas R$ 2.480,00
+        </p>
+        <p class="text-center">
+          <br>Não Alunos R$ 2.890,00
+        </p>
+        <p>Pagamento até 6x com juros no cartão.</p>
+      </div>
+      <div class="col-12 col-lg-5 d-flex flex-column align-items-center p-0">
         <h4>Data</h4>
-        <p class="texto-preco">02/09 á 06/09</p>
+        <p class="texto-preco">11/11 á 14/11</p>
       </div>
-      <div class="col-12 col-lg-3 d-flex flex-column align-items-center p-0">
+      <div class="col-12 col-lg-5 d-flex flex-column align-items-center p-0">
         <h4>Local</h4>
-        <p class="texto-preco">Jardim botânico Brasília</p>
+        <p class="texto-preco">Sitio da Colina - Itapevi SP</p>
       </div>
-      <div class="col-12 col-lg-3 d-flex flex-column align-items-center p-0">
-        <h4>Valor</h4>
-        <p class="texto-preco">R$ 2480,00</p>
-        <p class="text-center">1° Lote com 20% off até 20/06
-          Apenas 6 Vagas no 1° Lote<br>
-          2° Lote - R$ 3100,00<br>
-          Parcelamento em até 6x</p>
-      </div>
+
     </div>
     <div class="row">
       <div class="col-12 d-flex flex-column align-items-center p-0 mx-0 my-2">
         <a class="btn btn-primary btn-cta-compra" href="https://api.whatsapp.com/send?phone=5511982791420"
           target="_blank">Reservar minha vaga!</a>
-      </div>
-    </div>
-    <div class="row d-flex justify-content-center p-1 m-0">
-      <div class="col-12 col-lg-9 p-0">
-        <h3 class="title-fotos text-center my-4">Promoção Retiro + Formação Yoga 200h RYT</h3>
-        <p class="texto-preco text-center">5 vagas para pagamento até 30 de junho
-          20% desconto
-          Pague apenas R$ 896,00 no Retiro, compando junto com a formação.</p>
       </div>
     </div>
   </div>
