ajustes retiro e formação

--- a/studio-integral/src/app/app.component.html
+++ b/studio-integral/src/app/app.component.html
@@ -10,9 +10,10 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
         <div class="navbar-nav align-items-center justify-content-center">
           <a class="nav-link mx-3 active" aria-current="page" [routerLink]="['/main/home']">Home</a>
-          <a class="nav-link mx-3" aria-current="page" href="/main/formacao#compra">Formação</a>
-          <a class="nav-link mx-3" [routerLink]="['/main/retiro']">Cura e Chakras</a>
-          <a class="nav-link mx-3" [routerLink]="['/main/retiro-meditacao']">Retiro Meditação</a>
+          <a class="nav-link mx-3" aria-current="page" href="/main/formacao">Formação</a>
+          <a class="nav-link mx-3" href="/main/retiro">Cura e Chakras</a>
+          <a class="nav-link mx-3" [routerLink]="['/main/retiro-meditacao']" href="/main/retiro-meditacao">Retiro
+            Meditação</a>
           <a class="nav-link mx-3" [routerLink]="['/main/aulas-presencial']">Presencial</a>
           <a class="nav-link mx-3" [routerLink]="['/main/aulas-online']">App Online</a>
           <a class="nav-link mx-3" [routerLink]="['/main/mestres-da-linhagem']">Mestres</a>
@@ -39,8 +40,14 @@
       <a href="https://www.youtube.com/c/WalNunes" target="_blank"><i class='bx bxl-youtube  icon-footer mx-4'></i></a>
       <a href="https://www.instagram.com/studiointegral_yoga/" target="_blank"><i
           class='bx bxl-instagram-alt icon-footer mx-4'></i></a>
-      <a href="" target="_blank"><i class='bx bxl-whatsapp-square icon-footer mx-4'></i></a>
+      <a href="https://api.whatsapp.com/send?phone=5511982791420" target="_blank"><i
+          class='bx bxl-whatsapp-square icon-footer mx-4'></i></a>
     </div>
     COPYRIGHT 2021 | STUDIO INTEGRAL® Todos os direitos reservados
   </div>
+  <a href="https://api.whatsapp.com/send?phone=5511982791420" style="position:fixed;width:60px;height:60px;bottom:40px;right:40px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888;
+  z-index:1000;" target="_blank">
+    <!--     <i style="margin-top:16px" class="fa fa-whatsapp"></i>
+ --> <i style="margin-top:6px; margin-left: 1px; font-size: 3rem;" class='bx bxl-whatsapp'></i>
+  </a>
 </footer>
