--- a/studio-integral/src/app/main/home/home.component.html
+++ b/studio-integral/src/app/main/home/home.component.html
@@ -25,7 +25,7 @@
           <div class="carousel-caption d-block h-75">
             <h1 class="fonte-destaque display-5">Formação Yoga</h1>
             <p class="texto-destaque">Treinamento profissional em Yoga, Meditação e Autoconhecimento.</p>
-            <a class="btn btn-primary btn-carrosel" href="/main/formacao#compra">Saiba Mais</a>
+            <a class="btn btn-primary btn-carrosel" href="/main/formacao">Saiba Mais</a>
           </div>
         </div>
         <!-- <div class="carousel-item">
@@ -132,7 +132,7 @@
               os valores fundamentais dos métodos tradicionais do Yoga (Raja Yoga, Bhakti Yoga, Jñana Yoga, Karma
               Yoga
               e Tantra Yoga).</p>
-            <a class="btn btn-primary btn-card ms-4" href="/main/formacao#compra">Saiba Mais</a>
+            <a class="btn btn-primary btn-card ms-4" href="/main/formacao">Saiba Mais</a>
           </div>
         </div>
 
