--- a/studio-integral/src/app/main/retiro/retiro.component.html
+++ b/studio-integral/src/app/main/retiro/retiro.component.html
@@ -1,5 +1,5 @@
 <main>
-  <div id="carouselExampleIndicatorsBanner" class="carousel slide carrosel-destaque" data-bs-ride="carousel">
+  <!--   <div id="carouselExampleIndicatorsBanner" class="carousel slide carrosel-destaque" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="../assets/SlideRetiro1.jpg" class="d-block w-100 imagem-carrosel-banner" alt="...">
@@ -17,6 +17,24 @@
         harmonizar as
         energias.</p>
     </div>
+  </div> -->
+  <div class="header d-none d-sm-block">
+    <img class="img-header" src="../assets/bannerRetiroWeb.png" alt="">
+    <div class="text-header">
+      <h1 class="main-text">Retiro Yoga <br> Cura e Chakras</h1>
+      <p class="sub-text">Uma experiência única em meio a natureza, <br> para recarregar e
+        harmonizar as
+        energias.</p>
+    </div>
+  </div>
+  <div class="header d-block d-sm-none">
+    <img class="img-header" src="../assets/bannerRetiroMobile.png" alt="">
+    <div class="text-header">
+      <h1 class="main-text">Retiro Yoga <br> Cura e Chakras</h1>
+      <p class="sub-text">Uma experiência única em meio a natureza, <br> para recarregar e
+        harmonizar as
+        energias.</p>
+    </div>
   </div>
   <div class="container-fluid">
     <div class="row px-2">
@@ -25,6 +43,59 @@
           <div class="col-12 d-flex flex-column align-items-center">
             <h1 class="text-center text-limit my-5">Transforme a si mesmo e tenha a possibilidade de mudar sua realidade
               com esta imersão.</h1>
+            <div id="carouselExampleIndicators2" class="carousel slide mb-5 carrosel-fotos" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0"
+                  class="indicador-carrossel active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+                  data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+                  data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+                  data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+                  data-bs-slide-to="4" aria-label="Slide 5"></button>
+                <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+                  data-bs-slide-to="5" aria-label="Slide 6"></button>
+                <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+                  data-bs-slide-to="6" aria-label="Slide 7"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="../assets/retiro1.jpeg" class="d-block imagem-carrosel" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../assets/retiro2.jpeg" class="d-block imagem-carrosel" alt="...">
+                </div>
+                <div class="carousel-item ">
+                  <img src="../assets/retiro3.jpeg" class="d-block imagem-carrosel" alt="...">
+                </div>
+                <div class="carousel-item ">
+                  <img src="../assets/retiro4.jpeg" class="d-block imagem-carrosel" alt="...">
+                </div>
+                <div class="carousel-item ">
+                  <img src="../assets/retiro5.jpeg" class="d-block imagem-carrosel" alt="...">
+                </div>
+                <div class="carousel-item ">
+                  <img src="../assets/retiro6.jpeg" class="d-block imagem-carrosel" alt="...">
+                </div>
+                <div class="carousel-item ">
+                  <img src="../assets/retiro7.jpeg" class="d-block imagem-carrosel" alt="...">
+                </div>
+              </div>
+              <div class="d-none d-md-block">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2"
+                  data-bs-slide="prev">
+                  <span class="bx bx-chevron-left icon-carrosel" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators2"
+                  data-bs-slide="next">
+                  <span class="bx bx-chevron-right icon-carrosel" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            </div>
             <h1 class="text-center mt-4 mb-3"> O que é o Retiro Cura e Chakras?</h1>
             <p class="text-center">Uma nova forma de se ver através de uma leitura da alma.</p>
             <p class="text-center">Quem sou eu?</p>
@@ -74,28 +145,28 @@
     <h1 class="title-fotos text-center my-3">Fotos do Local</h1>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-          aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-          aria-label="Slide 4"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-          aria-label="Slide 5"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
-          aria-label="Slide 6"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
-          aria-label="Slide 7"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"
-          aria-label="Slide 8"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8"
-          aria-label="Slide 9"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9"
-          aria-label="Slide 10"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10"
-          aria-label="Slide 11"></button>
+        <button type="button" class="indicador-carrossel active" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="0" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="4" aria-label="Slide 5"></button>
+        <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="5" aria-label="Slide 6"></button>
+        <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="6" aria-label="Slide 7"></button>
+        <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="7" aria-label="Slide 8"></button>
+        <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="8" aria-label="Slide 9"></button>
+        <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="9" aria-label="Slide 10"></button>
+        <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="10" aria-label="Slide 11"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item ">
@@ -132,16 +203,18 @@
           <img src="../assets/retiromeditacao11.jpeg" class="d-block imagem-carrosel" alt="...">
         </div>
       </div>
-      <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon " aria-hidden="true"></span>
-        <span class="visually-hidden ">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon seta-carrosel" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+      <div class="d-none d-md-block">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev">
+          <span class="bx bx-chevron-left icon-carrosel" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next">
+          <span class="bx bx-chevron-right icon-carrosel" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
   </div>
   <div class="container-fluid">
@@ -196,8 +269,7 @@
       </div>
       <div class="row">
         <div class="col-12 d-flex justify-content-center">
-          <a class="btn btn-primary btn-card my-4" href="https://youtu.be/_O-jph6Re1s" target="_blank">Saiba mais sobre
-            Wal Nunes</a>
+          <a class="btn btn-primary btn-card" href="/main/retiro#compra">Eu quero participar!</a>
         </div>
       </div>
     </div>
@@ -316,18 +388,9 @@
 
     </div> -->
   </div>
-  <div id="compra" class="preco">
+  <div id="compra"></div>
+  <div class="preco">
     <div class="row d-flex justify-content-center m-0 pt-4">
-      <div class="col-12 d-flex flex-column align-items-center p-0">
-        <h4>Promoção de lançamento</h4>
-        <p class="text-center">O valor do retiro Cura Chakras é de R$ 3.100,00</p>
-        <p class=" texto-preco text-center mb-0">Mas até dia 10 de setembro alunos da casa pagam apenas R$ 2.480,00
-        </p>
-        <p class="text-center">
-          <br>Não Alunos R$ 2.890,00
-        </p>
-        <p>Pagamento até 6x com juros no cartão.</p>
-      </div>
       <div class="col-12 col-lg-5 d-flex flex-column align-items-center p-0">
         <h4>Data</h4>
         <p class="texto-preco">11/11 á 14/11</p>
@@ -336,12 +399,40 @@
         <h4>Local</h4>
         <p class="texto-preco">Sitio da Colina - Itapevi SP</p>
       </div>
-
-    </div>
-    <div class="row">
-      <div class="col-12 d-flex flex-column align-items-center p-0 mx-0 my-2">
-        <a class="btn btn-primary btn-cta-compra" href="https://api.whatsapp.com/send?phone=5511982791420"
-          target="_blank">Reservar minha vaga!</a>
+      <div class="col-12 d-flex flex-column align-items-center p-0">
+        <h4>Promoção de lançamento</h4>
+        <div class="d-flex justify-content-center">
+          <div class="card-compra mx-3">
+            <div class="card-content d-flex flex-column align-items-center justify-content-around">
+              <p class="text-center"><strong>Até dia 10 de Setembro <br> 1° Lote</strong></p>
+              <hr>
+              <p>Alunos da casa R$ 2.480,00</p>
+              <p>Não alunos R$ 2.890,00</p>
+              <a href="https://api.whatsapp.com/send?phone=5511982791420&text=Ol%C3%A1!%20Eu%20quero%20reservar%20minha%20vaga%20no%20retiro%20Cura%20e%20Chakras!"
+                target="_blank" class="btn-cta pb-4">
+                Reservar</a>
+            </div>
+            <!-- <div class="card-content2 d-flex flex-column align-items-center justify-content-center">
+              <p class="text-center">2° Lote</p>
+              <p>R$ 3.100,00</p>
+            </div> -->
+          </div>
+          <div class="card-compra mx-3">
+            <div class="card-content d-flex flex-column align-items-center justify-content-around">
+              <p class="text-center"><strong>A partir de 11 de Setembro <br> 2° Lote</strong></p>
+              <hr>
+              <p>Alunos e não alunos</p>
+              <p>R$ 3.100,00</p>
+              <a class="btn-cta-disabled pb-4">
+                Reservar</a>
+            </div>
+            <!-- <div class="card-content2 d-flex flex-column align-items-center justify-content-center">
+              <p class="text-center">2° Lote</p>
+              <p>R$ 3.100,00</p>
+            </div> -->
+          </div>
+        </div>
+        <p class="mt-3">Pagamento até 6x com juros no cartão.</p>
       </div>
     </div>
   </div>
