--- a/studio-integral/src/app/main/formacao-novo/formacao-novo.component.html
+++ b/studio-integral/src/app/main/formacao-novo/formacao-novo.component.html
@@ -24,7 +24,7 @@
       <div class="col-12">
         <div class="row">
           <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-            <h1 class="text-center mt-5" style="font-size: 2rem;">Formação Internacional de professores de Yoga com
+            <h1 class="text-center mt-5" style="font-size: 2rem;">Formação de professores de Yoga com
               certificação internacional</h1>
             <p class="text-center text-limit">Experimente uma transformação profunda e encontre finalmente propósito
               para
