--- a/studio-integral/src/app/main/retiro-meditacao/retiro-meditacao.component.html
+++ b/studio-integral/src/app/main/retiro-meditacao/retiro-meditacao.component.html
@@ -20,7 +20,7 @@
   </div>
   <div class="row d-flex justify-content-center">
     <div class="col-12 col-lg-5 d-flex flex-column justify-content-center align-items-center">
-      <img class="img" src="../assets/lalita.png" style="width: 250px;" alt="">
+      <img class="img" src="../assets/durga.png" style="width: 250px;" alt="">
     </div>
     <div class="col-12 col-lg-5 mt-3 mt-lg-0 d-flex flex-column justify-content-center align-items-center">
       <h1>O que é Tantra?</h1>
@@ -46,6 +46,85 @@
           <li>Kali - Realização</li>
           <li>Lakshmi - Beleza</li>
         </ul>
+      </div>
+    </div>
+  </div>
+  <div class="row d-flex justify-content-center">
+    <div class="col-12 col-lg-10 d-flex flex-column justify-content-center align-items-center mt-4">
+      <h1>Onde Será o Retiro?</h1>
+      <h3 class="subtitle-carrossel">Sitio da Colina - Itapevi SP</h3>
+      <div id="carouselExampleIndicators2" class="carousel slide mb-5 carrosel-fotos" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0"
+            class="indicador-carrossel active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="4" aria-label="Slide 5"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="5" aria-label="Slide 6"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="6" aria-label="Slide 7"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="7" aria-label="Slide 8"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="8" aria-label="Slide 9"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="9" aria-label="Slide 10"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="10" aria-label="Slide 11"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item ">
+            <img src="../assets/retiromeditacao3.jpeg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item active">
+            <img src="../assets/retiromeditacao1.jpeg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../assets/retiromeditacao2.jpeg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item ">
+            <img src="../assets/retiromeditacao4.jpeg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item ">
+            <img src="../assets/retiromeditacao5.jpeg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item ">
+            <img src="../assets/retiromeditacao6.jpeg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item ">
+            <img src="../assets/retiromeditacao7.jpeg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item ">
+            <img src="../assets/retiromeditacao8.jpeg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item ">
+            <img src="../assets/retiromeditacao9.jpeg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item ">
+            <img src="../assets/retiromeditacao10.jpeg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item ">
+            <img src="../assets/retiromeditacao11.jpeg" class="d-block imagem-carrosel" alt="...">
+          </div>
+        </div>
+        <div class="d-none d-md-block">
+          <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide="prev">
+            <span class="bx bx-chevron-left icon-carrosel" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide="next">
+            <span class="bx bx-chevron-right icon-carrosel" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
       </div>
     </div>
   </div>
@@ -267,85 +346,6 @@
         allowfullscreen></iframe>
     </div>
   </div>
-  <div class="row d-flex justify-content-center">
-    <div class="col-12 col-lg-10 d-flex flex-column justify-content-center align-items-center my-4">
-      <h1>Onde Será o Retiro?</h1>
-      <h3 class="subtitle-carrossel">Sitio da Colina - Itapevi SP</h3>
-      <div id="carouselExampleIndicators2" class="carousel slide mb-5 carrosel-fotos" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0"
-            class="indicador-carrossel active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
-            data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
-            data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
-            data-bs-slide-to="3" aria-label="Slide 4"></button>
-          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
-            data-bs-slide-to="4" aria-label="Slide 5"></button>
-          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
-            data-bs-slide-to="5" aria-label="Slide 6"></button>
-          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
-            data-bs-slide-to="6" aria-label="Slide 7"></button>
-          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
-            data-bs-slide-to="7" aria-label="Slide 8"></button>
-          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
-            data-bs-slide-to="8" aria-label="Slide 9"></button>
-          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
-            data-bs-slide-to="9" aria-label="Slide 10"></button>
-          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
-            data-bs-slide-to="10" aria-label="Slide 11"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item ">
-            <img src="../assets/retiromeditacao3.jpeg" class="d-block imagem-carrosel" alt="...">
-          </div>
-          <div class="carousel-item active">
-            <img src="../assets/retiromeditacao1.jpeg" class="d-block imagem-carrosel" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/retiromeditacao2.jpeg" class="d-block imagem-carrosel" alt="...">
-          </div>
-          <div class="carousel-item ">
-            <img src="../assets/retiromeditacao4.jpeg" class="d-block imagem-carrosel" alt="...">
-          </div>
-          <div class="carousel-item ">
-            <img src="../assets/retiromeditacao5.jpeg" class="d-block imagem-carrosel" alt="...">
-          </div>
-          <div class="carousel-item ">
-            <img src="../assets/retiromeditacao6.jpeg" class="d-block imagem-carrosel" alt="...">
-          </div>
-          <div class="carousel-item ">
-            <img src="../assets/retiromeditacao7.jpeg" class="d-block imagem-carrosel" alt="...">
-          </div>
-          <div class="carousel-item ">
-            <img src="../assets/retiromeditacao8.jpeg" class="d-block imagem-carrosel" alt="...">
-          </div>
-          <div class="carousel-item ">
-            <img src="../assets/retiromeditacao9.jpeg" class="d-block imagem-carrosel" alt="...">
-          </div>
-          <div class="carousel-item ">
-            <img src="../assets/retiromeditacao10.jpeg" class="d-block imagem-carrosel" alt="...">
-          </div>
-          <div class="carousel-item ">
-            <img src="../assets/retiromeditacao11.jpeg" class="d-block imagem-carrosel" alt="...">
-          </div>
-        </div>
-        <div class="d-none d-md-block">
-          <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleIndicators2"
-            data-bs-slide="prev">
-            <span class="bx bx-chevron-left icon-carrosel" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators2"
-            data-bs-slide="next">
-            <span class="bx bx-chevron-right icon-carrosel" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
 <div class="row  valores">
   <div class="col-12 d-flex flex-column justify-content-center align-items-center pt-4" id="compra">
@@ -359,7 +359,8 @@
             <hr>
             <p>1° Lote</p>
             <p>R$ 2.100,00</p>
-            <a href="https://api.whatsapp.com/send?phone=5511982791420" target="_blank" class="btn-cta pb-4">
+            <a href="https://app.glofox.com/portal/#/branch/605cb19ff9f3f065f15e2295/memberships/61e1b88786588044e52db7a7/plan/1660848634230/buy"
+              target="_blank" class="btn-cta pb-4">
               Reservar</a>
           </div>
           <div class="card-content2 d-flex flex-column align-items-center justify-content-center">
@@ -375,7 +376,8 @@
             <hr>
             <p>1° Lote</p>
             <p>R$ 1.200,00</p>
-            <a href="https://api.whatsapp.com/send?phone=5511982791420" target="_blank" class="btn-cta pb-4">
+            <a href="https://app.glofox.com/portal/#/branch/605cb19ff9f3f065f15e2295/memberships/61e1b88786588044e52db7a7/plan/1660848482623/buy"
+              target="_blank" class="btn-cta pb-4">
               Reservar</a>
           </div>
           <div class="card-content2 d-flex flex-column align-items-center justify-content-center">
@@ -391,7 +393,8 @@
             <hr>
             <p>1° Lote</p>
             <p>R$ 900,00</p>
-            <a href="https://api.whatsapp.com/send?phone=5511982791420" target="_blank" class="btn-cta pb-4">
+            <a href="https://app.glofox.com/portal/#/branch/605cb19ff9f3f065f15e2295/memberships/61e1b88786588044e52db7a7/plan/1642182106383/buy"
+              target="_blank" class="btn-cta pb-4">
               Reservar</a>
           </div>
           <div class="card-content2 d-flex flex-column align-items-center justify-content-center">
@@ -401,5 +404,6 @@
         </div>
       </div>
     </div>
+    <h5 class="subtitle-carrossel text-center mb-4">Entre em contato e veja opções de parcelamento.</h5>
   </div>
 </div>
