alteração de texto home

--- a/studio-integral/src/app/main/home/home.component.html
+++ b/studio-integral/src/app/main/home/home.component.html
@@ -156,13 +156,11 @@
       <div class="row">
         <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
           <h1 class="text-center">O método iTantra</h1>
-          <p class="text-center">O Studio Integral oferece um método que unifica as práticas tradicionais, o Yoga
-            moderno e
-            o Kalaripayattu Kerala (arte marcial ancestral ensinada nas escolas tântricas do sul da Índia). Com a
-            unificação
-            dessas
-            práticas, surgiu nossa metodologia de ensino: o método iTantra. Uma metodologia inclusiva que facilita o
-            desenvolvimento do aluno, independentemente da sua experiência dentro do universo do Yoga e da Meditação.
+          <p class="text-center">O método Itantra é uma orientação filosófica da tradição Sri Vidya Tantra, trazida da
+            Índia por Wal Nunes, que tem mais de 20 anos de experiência na prática e ensino em Yoga e Meditação, sendo
+            uma das primeiras professoras a trazer para o Brasil o ensino da arte marcial Kalaripayattu, de origem
+            tântrica, que influencia as práticas de Hatha Yoga e Tantra Yoga, com o objetivo de preparar e purificar o
+            corpo físico e energético (nadis e chakras) para a meditação.
           </p>
         </div>
         <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
